# logos-workspace

./: .gitignore  CLAUDE.md  README.md  bootstrap.sh  pull_all.sh
PoCs/logos-experiments/: .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml
PoCs/logos-experiments/.develop/: design.md  session-notes.md
PoCs/logos-experiments/docs/: cli.md  concepts.md  examples.md  getting-started.md  logging.md  writing-evals.md
PoCs/logos-experiments/experiments/example_software_task/: goal.yaml
PoCs/logos-experiments/experiments/example_software_task/eval/: test_retry.py
PoCs/logos-experiments/experiments/vjepa_clip_alignment/: constraints.yaml  goal.yaml  status.yaml
PoCs/logos-experiments/experiments/vjepa_clip_alignment/develop/: current_state.md  research.md  stories.md
PoCs/logos-experiments/harness/: __init__.py  init.py  journal.py  logging.py  metrics.py  monitor.py  new.py  pytest_eval.py  run.py
PoCs/logos-experiments/tests/: conftest.py  test_e2e.py  test_gaps.py  test_harness.py  test_jepa.py  test_live.py  test_logging.py  test_run.py
adversarial-tests/: README.md  pyproject.toml
adversarial-tests/config/: apollo-python.env  apollo-webapp.env  hermes.env  logos.env  sophia.env  talos.env
adversarial-tests/prompts/: adversary.md  judge.md  orchestrator.md  writer.md
docs/: ARCHITECTURE.md  CI_CD.md  CODE_QUALITY.md  COGNITIVE_LOOP.md  LOCAL_SETUP.md  OBSERVABILITY.md  PACKAGE_PUBLISHING.md  PROJECT_TRACKING.md  STATUS.md  TALOS_IMPROVEMENTS.md  TESTING.md  VISION.md  WHY.md  scratch
scripts/: check-foundry-drift.sh  monitor_pod_process.sh  (+4 more)
(+137 files in other folders)
